# hltv-prediction-app

./: .replit  README.md  fastapi_server.py  main.py  package-lock.json  package.json  pyproject.toml  python_backend.py  python_backend_old.py  replit.md  run_fastapi.py  start_fastapi.sh  start_python.sh  tailwind.config.ts
